--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/background_placement.css" />
-    <link rel="stylesheet" href="styles/navbar.css" />
-    <link rel="stylesheet" href="styles/overlay_placement.css" />
+    <link rel="stylesheet" href="Projects/Styles/background_placement.css" />
+    <link rel="stylesheet" href="Projects/Styles/navbar.css" />
+    <link rel="stylesheet" href="Projects/Styles/overlay_placement.css" />
     <!-- for the webpage icon -->
-    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="Projects/Assets/logo.png" type="image/x-icon" />
     <title>TeamUAV | Projects</title>
   </head>
   <body>
-    <script src="scripts/background_animation.js"></script>
-    <script src="scripts/project_page_renderer.js"></script>
-    <script src="scripts/3d_renderer.js" type="module"></script>
+    <script src="Projects/Scripts/background_animation.js"></script>
+    <script src="Projects/Scripts/project_page_renderer.js"></script>
+    <script src="Projects/Scripts/3d_renderer.js" type="module"></script>
   </body>
 </html>
