info panel partially done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Projects/Styles/background_placement.css" />
     <link rel="stylesheet" href="Projects/Styles/navbar.css" />
     <link rel="stylesheet" href="Projects/Styles/overlay_placement.css" />
+    <link rel="stylesheet" href="Projects/Styles/overlay_info_panel.css">
     <!-- for the webpage icon -->
     <link rel="shortcut icon" href="Projects/Assets/logo.png" type="image/x-icon" />
     <title>TeamUAV | Projects</title>
