data for specifications posted

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>TeamUAV | Projects</title>
   </head>
   <body>
+    <script src="Projects/Scripts/data.js"></script>
     <script src="Projects/Scripts/background_animation.js"></script>
     <script src="Projects/Scripts/project_page_renderer.js"></script>
     <script src="Projects/Scripts/3d_renderer.js" type="module"></script>
