cross platform scrolling enabled and graph added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <title>TeamUAV | Projects</title>
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <script src="Projects/Scripts/zenscroll-min.js"></script>
     <script src="Projects/Scripts/data.js"></script>
     <script src="Projects/Scripts/background_animation.js"></script>
+    <!-- <script src="Projects/Scripts/responsive_background_animation.js"></script> -->
     <script src="Projects/Scripts/project_page_renderer.js"></script>
     <script src="Projects/Scripts/3d_renderer.js" type="module"></script>
   </body>
