file structure changed to make it work with github pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <script src="Assets/Global/navbar.js"></script>
+    <script src="Pages/GlobalAssets/navbar.js"></script>
 
     <div class="container about-info">
       <h1 id="title">Board Members</h1>
