--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
   </head>
 
   <body>
-    <script src="Pages/GlobalAssets/navbar.js"></script>
+     <script src="Pages/GlobalAssets/navbar.js"></script>
 
-    <div class="container about-info">
+     <div class="container about-info">
       <h1 id="title">Board Members</h1>
       <ul>
         <li>Hello</li>
+        <li>There</li>
+        <li>Sup man</li>
+        <li>Sup man</li>
+        <li>Hello</li>
+        <li>There</li>
+        <li>Sup man</li>
+        <li>Sup man</li><li>Hello</li>
         <li>There</li>
         <li>Sup man</li>
         <li>Sup man</li>
