html css done for about know more page

--- a/index.html
+++ b/index.html
@@ -4,33 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="../../Assets/Global/navbar.css"/> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="Pages/About/layout.css">
     <title>About</title>
   </head>
 
   <body>
      <script src="Pages/GlobalAssets/navbar.js"></script>
-
      <div class="container about-info">
       <h1 id="title">Board Members</h1>
-      <ul>
-        <li>Hello</li>
-        <li>There</li>
-        <li>Sup man</li>
-        <li>Sup man</li>
-        <li>Hello</li>
-        <li>There</li>
-        <li>Sup man</li>
-        <li>Sup man</li><li>Hello</li>
-        <li>There</li>
-        <li>Sup man</li>
-        <li>Sup man</li>
-        <li class="active">How you doin</li>
-        <li>How you doin</li>
-        <li>How you doin</li>
-        <li>How you doin</li>
-      </ul>
+      <div class="content">
+      <script src="Pages/About/layout_controller.js"></script>
+        <div class="know-more-card">
+          <div class="know-more-details">
+            <div class="view-more-btn">
+              <p>View More</p>
+              <i class="material-icons" id="view-more-arrow"> arrow_back </i>
+            </div>
+            <div class="know-more-details-fields active">
+              <div class="field">
+                <p id="name">NAME</p>
+                <p id="name-value">Valentino Rossi</p>
+              </div>
+              <div class="field">
+                <p id="name">ABOUT</p>
+                <p id="name-value" class="long">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium, doloremque dolorum? Enim facilis quibusdam, aut laudantium adipisci sit veritatis dignissimos quo molestiae eos vero impedit, ut hic minima fugiat? Vero?</p>
+              </div>
+              <div class="field">
+                <p id="name">SKILLS</p>
+                <p id="name-value" class="long">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium, doloremque dolorum? Enim facilis quibusdam, aut laudantium adipisci sit veritatis dignissimos quo molestiae eos vero impedit, ut hic minima fugiat? Vero?</p>
+              </div>
+            </div>
+
+            <div class="know-more-details-fields">
+              <div class="field">
+                <p id="name">positions held</p>
+                <p id="name-value">Valentino Rossi</p>
+              </div>
+              <div class="field">
+                <p id="name">contact</p>
+                <a href="" id="name-value">Instagram</a>
+                <a href="" id="name-value">LinkedIn</a>
+              </div>
+            </div>
+
+            
+            <div id="navigation-dots">
+              <div class="dot">
+                <img src="Pages/About/Assets/active.png" class="active">
+                <img src="Pages/About/Assets/inactive.png">
+              </div>
+              <div class="dot">
+                <img src="Pages/About/Assets/active.png">
+                <img src="Pages/About/Assets/inactive.png" class="active">
+              </div>
+            </div>
+          </div>
+          <img src="https://m.gpone.com/sites/default/files/images/2021/article/foto/05/MotoGP/05-LeMans/rossi-box-1621097058.jpg" class="know-more-image"/>
+        </div>
+      </div>
     </div>
   </body>
 </html>
