card functionality added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 id="title">Board Members</h1>
       <div class="content">
       <script src="Pages/About/layout_controller.js"></script>
-        <div class="know-more-card">
+        <!-- <div class="know-more-card">
           <div class="know-more-details">
             <div class="view-more-btn">
               <p>View More</p>
@@ -61,8 +61,8 @@
             </div>
           </div>
           <img src="https://m.gpone.com/sites/default/files/images/2021/article/foto/05/MotoGP/05-LeMans/rossi-box-1621097058.jpg" class="know-more-image"/>
-        </div>
-      </div>
+        </div> -->
+      </div> 
     </div>
   </body>
 </html>
