--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <script src="Pages/GlobalAssets/navbar.js"></script>
-  <div class="container home">
+  <div class="container home"></div>
   <script src="Pages/Home/home.js"></script>
 </body>
 
