frame for Fleet page done

--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="Pages/About/layout.css">
+  <link rel="stylesheet" href="Pages/Fleet/layout.css">
   <link rel="stylesheet" href="Pages/Home/style.css">
+  <link rel="stylesheet" href="Pages/Fleet/triangles.css">
   <title>About</title>
 </head>
-
-<body>
-  <script src="Pages/Home/home.js"></script>
-  <script src="Pages/GlobalAssets/navbar.js"></script>
-</body>
-
+  <body>
+    <!-- <script src="Pages/Home/home.js"></script> -->
+    <script src="Pages/GlobalAssets/navbar.js"></script>
+    <div class="container fleet">
+      <div class="fleet-icons-container">
+        <div class="toggle" id="up"></div>
+          <div class="fleet-icons">
+            <div class="fleet-icons-icon"></div>
+            <div class="fleet-icons-icon"></div>
+            <div class="fleet-icons-icon"></div>
+            <div class="fleet-icons-icon"></div>
+            <div class="fleet-icons-icon"></div>
+          </div>
+        <div class="toggle" id="down"></div>
+      </div>
+      <div class="fleet-info">
+        
+      </div>
+      <div class="fleet-model">
+        
+      </div>
+    </div>
+  </body>
 </html>
