screen overflow fixed

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
     </div>
 
     <script>
-      // let dom = document.querySelector('.fleet-info');
+      // let DOM = document.querySelector('.fleet-info');
       // setInterval(() => {
-      //   dom.classList.toggle('expanded');
+      //   DOM.classList.toggle('expanded');
       // }, 3000)
 
       let graph = new Chart(document.querySelector("#plot-graph"), {
