model viewer customized

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container fleet">
       <div class="fleet-icons-container">
         <div class="toggle" id="up">
-          <img src="Pages/Fleet/up_btn.svg" />
+          <img src="Pages/Fleet/assets/up_btn.svg" />
         </div>
 
         <div class="fleet-icons">
@@ -61,7 +61,7 @@
         </div>
 
         <div class="toggle" id="down">
-          <img src="Pages/Fleet/down_btn.svg" />
+          <img src="Pages/Fleet/assets/down_btn.svg" />
         </div>
       </div>
       <div class="fleet-info">
