dynamic data loading enabled for fleet page

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
       </div> -->
       <!-- <div class="fleet-model"></div>  -->
     </div>
+    <script src="Pages/Fleet/scripts/data.js"></script>
     <script src="Pages/Fleet/scripts/components.js"></script>
   </body>
 </html>
