about know more page made dynamic with list links clickable

--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Pages/About/layout.css" />
+    <link rel="stylesheet" href="Pages/About/knowMorePage/layout-components.css" />
     <link rel="stylesheet" href="Pages/Fleet/styles/layout.css" />
     <link rel="stylesheet" href="Pages/Fleet/styles/icons.css" />
     <link rel="stylesheet" href="Pages/Home/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="Pages/Fleet/scripts/data.js"></script>
     <script src="Pages/Fleet/dependencies/smoothscroll.js"></script>
-    <!-- <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script> -->
     <title>About</title>
   </head>
   <body>
-    <script src="Pages/Home/home.js"></script>
     <script src="Pages/GlobalAssets/navbar.js"></script>
-    <div class="container fleet">
-      
+    <div class="container about-info">
+      <!-- <p id="title">Board Members</p>
+      <div class="content"></div> -->
     </div>
-    <script src="Pages/Fleet/scripts/components.js" type="module"></script>
+    <script src="Pages/About/knowMorePage/scripts/data.js"></script>
+    <script src="Pages/About/knowMorePage/scripts/about-know-more.js" type="module"></script>
+    <!-- <script src="Pages/Fleet/scripts/components.js" type="module"></script>
     <script src="Pages/Fleet/scripts/model-renderer.js" type="module"></script>
-    <script src="Pages/Fleet/scripts/main.js" type="module"></script>
+    <script src="Pages/Fleet/scripts/fleet.js" type="module"></script> -->
+    <!-- <script src="Pages/Home/home.js"></script> -->
   </body>
 </html>
