about main page started

--- a/index.html
+++ b/index.html
@@ -12,19 +12,63 @@
     <link rel="stylesheet" href="Pages/Fleet/styles/layout.css" />
     <link rel="stylesheet" href="Pages/Fleet/styles/icons.css" />
     <link rel="stylesheet" href="Pages/Home/style.css" />
+    <link rel="stylesheet" href="Pages/About/MainPage/styles/layout.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="Pages/Fleet/scripts/data.js"></script>
+    <script src="Pages/About/knowMorePage/scripts/data.js"></script>
     <script src="Pages/Fleet/dependencies/smoothscroll.js"></script>
     <title>About</title>
   </head>
   <body>
     <script src="Pages/GlobalAssets/navbar.js"></script>
-    <div class="container about-info">
-      <!-- <p id="title">Board Members</p>
-      <div class="content"></div> -->
+    <div class="container about">
+      <div id="heading">
+        <p>About</p>
+        <p>Team UAV</p>
+      </div>
+      <p id="about-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus atque labore magnam ratione dolore velit dignissimos deserunt fugiat porro, rerum delectus enim harum pariatur? Aliquid ex itaque tempora in repudiandae.
+      Facilis numquam eum, unde fuga ipsum et fugit minima corporis. Ratione atque qui recusandae dolores asperiores neque accusantium, nemo, consectetur sunt mollitia maiores tempore? Sequi accusamus possimus sed debitis nesciunt!</p>
+
+      <div id="departments-banner">
+        <div id="left">
+          <div class="top"></div>
+        <div class="bottom"></div>
+        </div>
+        <div id="right">
+          <div class="right top"></div>
+        <div class="right bottom"></div>
+        </div>
+
+        <div id="images-container-dummy">
+          <div id="images-container-main">
+            <img src="Pages/About/MainPage/Assets/Management.svg" id="manage">
+            <img src="Pages/About/MainPage/Assets/CS.svg" id="CS">
+            <img src="Pages/About/MainPage/Assets/Filled.svg" id="depts">
+            <img src="Pages/About/MainPage/Assets/Electrical.svg" id="elec">
+            <img src="Pages/About/MainPage/Assets/Mechanical.svg" id="mech">
+          </div>
+        </div>
+      </div>
+
+      <div class="know-more-panels">
+
+        <div class="know-more-link-card">
+            <div class="number-circle first">1</div>
+          <div id="panel-content"></div>
+        </div>
+
+        <div class="know-more-link-card">
+            <div class="number-circle">2</div>
+          <div id="panel-content"></div>
+        </div>
+
+        <div class="know-more-link-card">
+            <div class="number-circle last">3</div>
+          <div id="panel-content"></div>
+        </div>
+      </div>
     </div>
-    <script src="Pages/About/knowMorePage/scripts/data.js"></script>
-    <script src="Pages/About/knowMorePage/scripts/about-know-more.js" type="module"></script>
+    <!-- <script src="Pages/About/knowMorePage/scripts/about-know-more.js" type="module"></script> -->
     <!-- <script src="Pages/Fleet/scripts/components.js" type="module"></script>
     <script src="Pages/Fleet/scripts/model-renderer.js" type="module"></script>
     <script src="Pages/Fleet/scripts/fleet.js" type="module"></script> -->
