simple url control added

--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
     <script src="Pages/Fleet/scripts/data.js"></script>
     <script src="Pages/About/knowMorePage/scripts/data.js"></script>
     <script src="Pages/Fleet/dependencies/smoothscroll.js"></script>
+    <script src="Pages/About/knowMorePage/scripts/about-know-more.js" type="module"></script>
+    <script src="Pages/About/MainPage/script/about.js" type="module"></script>
+    <script src="Pages/Fleet/scripts/model-renderer.js" type="module"></script>
+    <script src="Pages/Fleet/scripts/fleet.js" type="module"></script>
+    <script src="Pages/Home/home.js"></script> 
     <title>About</title>
   </head>
   <body>
     <script src="Pages/GlobalAssets/navbar.js"></script>
-    <div class="container about">
-      <script src="Pages/About/MainPage/script/components.js"></script>
-      
-    </div>
-    <!-- <script src="Pages/About/knowMorePage/scripts/about-know-more.js" type="module"></> -->
-    <!-- < src="Pages/Fleet/scripts/components.js" type="module"></>
-    <script src="Pages/Fleet/scripts/model-renderer.js" type="module"></>
-    <script src="Pages/Fleet/scripts/fleet.js" type="module"></script> -->
-    <!-- <script src="Pages/Home/home.js"></script>  -->
+    <script src="app.js" type="module"></script>
   </body>
 </html>
