--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="Pages/About/knowMorePage/layout-components.css"
     />
+    <link rel="stylesheet" href="Pages/GlobalAssets/navbar.css"/>
     <link rel="stylesheet" href="Pages/Fleet/styles/layout.css" />
     <link rel="stylesheet" href="Pages/Fleet/styles/icons.css" />
     <link rel="stylesheet" href="Pages/Home/style.css" />
@@ -28,7 +29,7 @@
     <title>About</title>
   </head>
   <body>
-    <script src="Pages/GlobalAssets/navbar.js"></script>
+    <script src="Pages/GlobalAssets/navbar.js" type="module"></script>
     <script src="app.js" type="module"></script>
   </body>
 </html>
