additional asthetics added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="Pages/About/knowMorePage/layout-components.css"
     />
+    <link rel="shortcut icon" href="Pages/GlobalAssets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="Pages/GlobalAssets/navbar.css"/>
     <link rel="stylesheet" href="Pages/Fleet/styles/layout.css" />
     <link rel="stylesheet" href="Pages/Fleet/styles/icons.css" />
@@ -26,7 +27,7 @@
     <script src="Pages/Fleet/scripts/model-renderer.js" type="module"></script>
     <script src="Pages/Fleet/scripts/fleet.js" type="module"></script>
     <script src="Pages/Home/home.js"></script> 
-    <title>About</title>
+    <title></title>
   </head>
   <body>
     <script src="Pages/GlobalAssets/navbar.js" type="module"></script>
