--- a/index.html
+++ b/index.html
@@ -32,5 +32,12 @@
   <body>
     <script src="Pages/GlobalAssets/navbar.js" type="module"></script>
     <script src="app.js" type="module"></script>
+    <!-- <div class="container credits">
+      <div class="title-div">
+        <p id="title">Credits</p>
+        <p id="subtitle">Project Lead</p>
+        <p id="name">Gaurav Singh</p>
+      </div> -->
+    </div>
   </body>
 </html>
