tiny change to the cursor

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     <script src="Pages/Home/home.js"></script> 
     <title></title>
   </head>
+  <style>
+    *{
+      cursor: url("Pages/GlobalAssets/Mouse.svg"), auto;
+    }
+    *:active{
+      cursor: url("Pages/GlobalAssets/MouseActive.svg"), auto;
+    }
+  </style>
   <body>
     <script src="Pages/GlobalAssets/navbar.js" type="module"></script>
     <script src="app.js" type="module"></script>
